--- a/deep RL.ipynb
+++ b/deep RL.ipynb
@@ -27,6 +27,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agent class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -90,10 +97,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1134,6 +1149,13 @@
     "    agent.replay(32)\n",
     "    if e % 10 == 0:\n",
     "        agent.save(\"cartpole3.kek\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Atother model"
    ]
   },
   {
